--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     }
   ],
   "devDependencies": {
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-nodeunit": "~0.3.0",
+    "grunt-contrib-clean": "0.5.0",
+    "grunt-contrib-jshint": "0.8.0",
+    "grunt-contrib-nodeunit": "0.3.0",
     "grunt": "~0.4.2",
-    "jshint-stylish": "~0.1.5",
-    "load-grunt-tasks": "~0.3.0"
+    "jshint-stylish": "0.1.5",
+    "load-grunt-tasks": "0.3.0",
+    "handlebars": "1.3.0",
+    "underscore": "1.6.0"
   },
   "scripts": {
     "test": "grunt test"
