--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-dashboard",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Generates a static dashboard based on data parsed within specified files",
   "homepage": "https://github.com/larsonjj/grunt-dashboard",
   "repository": "https://github.com/larsonjj/grunt-dashboard",
@@ -25,7 +25,8 @@
     "handlebars": "1.3.0",
     "underscore": "1.6.0",
     "jade": "~1.3.1",
-    "ejs": "~1.0.0"
+    "ejs": "~1.0.0",
+    "swig": "~1.3.2"
   },
   "devDependencies": {
     "grunt-contrib-clean": "0.5.0",
