--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     }
   ],
   "dependencies": {
-    "handlebars": "1.3.0",
-    "underscore": "1.6.0",
+    "handlebars": "~1.3.0",
+    "underscore": "~1.6.0",
+    "underscore.string": "~2.3.3",
     "jade": "~1.3.1",
-    "ejs": "~1.0.0",
     "swig": "~1.3.2"
   },
   "devDependencies": {
