--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-dashboard",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Generates a static dashboard based on data parsed within specified files",
   "homepage": "https://github.com/larsonjj/grunt-dashboard",
   "repository": "https://github.com/larsonjj/grunt-dashboard",
@@ -22,11 +22,11 @@
     }
   ],
   "dependencies": {
-    "handlebars": "~1.3.0",
+    "handlebars": "^2.0.0",
     "underscore": "~1.6.0",
     "underscore.string": "~2.3.3",
-    "jade": "~1.5.0",
-    "swig": "~1.4.2"
+    "jade": "^1.9.1",
+    "swig": "^1.4.2"
   },
   "devDependencies": {
     "grunt-contrib-clean": "0.5.0",
